--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>My iphone</title>
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<title>Title</title>
 
 	</head>
 
@@ -24,9 +25,9 @@
 	        <p id="one">Start something new.</p>
 	        <p id="two">We are the future.</p>
 	        <img height="100"src="C:\Users\tushar\Downloads\apple.png"/>
-	        <p id="three"> Think Different</p>
+	        <p id="three"> Save Earth</p>
 	    </div>
-
+<span class="label label-default">Bachelors</span>
 	    <div id= "footer"> 
 	    	<p id="mini"> Mini Project</p>
 	    </div>
