Remove Old CSS & Implimentation and Remove Obsolete Code

--- a/index.html
+++ b/index.html
@@ -2,23 +2,17 @@
 <html>
 	<head>
 
-		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.css">
+		<link type="text/css" rel="stylesheet" href="css/custom.css"/>
 		<title>Title</title>
 
 	</head>
 
 	<body>
-
-	    <div class="header">
-
-	        <p id="better"> Better starts here!</p>
-
-	        <p id="about">About&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Customer Service&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My Account&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Help&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Eco System&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Solutions</p>
-
-	        <p id="log"> Log In&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Sign Up</p>
-
-	    </div>
+	
+		<div class="btn-group-justified">
+			<a href="#" class="btn-primary">About</a>
+		</div>	
 
 	    <div class="center"> 
 
@@ -27,7 +21,7 @@
 	        <img height="100"src="C:\Users\tushar\Downloads\apple.png"/>
 	        <p id="three"> Save Earth</p>
 	    </div>
-<span class="label label-default">Bachelors</span>
+
 	    <div id= "footer"> 
 	    	<p id="mini"> Mini Project</p>
 	    </div>
