--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 		<link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 		<link type="text/css" rel="stylesheet" href="css/custom.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Title</title>
 
 	</head>
