--- a/index.html
+++ b/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-
+		<Title>Title | Mini</Title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 		<link type="text/css" rel="stylesheet" href="css/custom.css"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Title</title>
 
 	</head>
 
 	<body>
-	
-		<div class="btn-group-justified">
-			<a href="#" class="btn-primary">About</a>
-		</div>	
-
-	    <div class="center"> 
-
-	        <p id="one">Start something new.</p>
-	        <p id="two">We are the future.</p>
-	        <img height="100"src="C:\Users\tushar\Downloads\apple.png"/>
-	        <p id="three"> Save Earth</p>
-	    </div>
-
-	    <div id= "footer"> 
-	    	<p id="mini"> Mini Project</p>
+	<div class="container">
+		<div class="jumbotron">
+			<div class="text-center">
+				<h1>Environment Mini Project
+				<h3>INDIA'S FIRST PROBLEMS REPORTING SITE
+			</div>
+		
+			
+			<div class="btn-group-lg btn-group-justified">
+				<a href="#" class="btn btn-primary">About</a>
+				<a href="#" class="btn btn-primary">Service</a>
+				<a href="#" class="btn btn-primary">Eco System</a>
+				<a href="#" class="btn btn-primary">Solutions</a>
+				<a href="#" class="btn btn-primary">Help</a>
+			</div>	
+		</div>
+		
+		
+		<div class="text-center"> 
+			<p><h3>Start something new.</p>
+			<p><h4>We are the future.</p>
+			<img height="100" src="Image-link"></img>
+			<p><h3>Save Earth</p>
+			
+			<div class="btn btn-group-lg">
+			    <br><br>
+				<button type="button" class="btn btn-default">Report Problem</button>
+			</div>
+		</div>
+	</div>
+		
+	    <div> 
+	    	<p><br><br><h4>Mini Project</p>
 	    </div>
 
 	</body>
