--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link type="text/css" rel="stylesheet" href="css\bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 
-    <link type="text/css" rel="stylesheet" href="css\custom.css">
+    <link type="text/css" rel="stylesheet" href="css/custom.css">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
