--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						
 						<li><a href=""> <p>Home</p></a></li> <li> <tab2>  </tab2> </li>
 						
-						<li><a href="S:/Project/About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
+						<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
 
                         <li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
 
