--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		
 			<div class="navbar-header">
 			
-				<a href="S:/Project/index.html"> <p > WM </p> </a>
+				<a href="index.html"> <p > WM </p> </a>
 			
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon-bar"></span>
@@ -59,7 +59,7 @@
 						
 						<li><a href=""> <p>Home</p></a></li> <li> <tab2>  </tab2> </li>
 						
-						<li><a href="S:/Project/About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
+						<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
 
                         <li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
 
@@ -87,7 +87,7 @@
         </div>
 		
 		<div class="text-center">
-			<p style="font-family: Myriad Pro Light;font-size:52px;font-weight:lighter"> Clean <span style="color:#2152a8">India</span>.<span style="color:#b8ff00">Green</span><span style="color:#2152a8">India</span>
+			<p style="font-family: Myriad Pro , Calibri, sans-serif;font-size:52px;font-weight:lighter"> Clean <span style="color:#2152a8">India</span>.<span style="color:#b8ff00">Green</span><span style="color:#2152a8">India</span>
 			<div class="img-responsive">
 				<img height="200" src="S:\mini-project\wm1.png" />
 			</div>
