--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
 		
 			<div class="navbar-header" >
 				
-				<a href="index.html"> <p > WM </p> </a>
+				<a class="navbar-brand" href="index.html">WM</a>
 				
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon-bar"></span>
