--- a/About.html
+++ b/About.html
@@ -77,7 +77,7 @@
 	
 	<div class="container-fluid">
          
-        <div class="jumbotron" style="background-color:#c6ff32;">
+        <div class="jumbotron" style="background-color:#b8ff00">
 		
                 <div class="text-center">
 				
