--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 		<div class="quote">
 
 			<p>We Don't Need Reason To  Help</p>
-			<h3> - Gajanan Balasaheb More</h3>
 		</div>
 			
 	</div>
@@ -178,29 +177,27 @@
 			</form>
 		</div>
 	</div>
-	<br><br><br><br><br><br>
+	<br><br><br><br><br><br><br>
 
 	<div class="img-responsive">
 		<img src="image.jpg" style="height: auto ; max-width:100% ">
 	</div>
-
-	<hr style="border-color:#000">
-
-
-	<br><br><br><br>
-
    
    	<div class="blocks">     
 		<div class="thumbnail">
-			<p>First</p>
+			<img class="thumb" src="image1.jpg" >
 		</div>
 
 		<div class="thumbnail">
-			<p>second</p>
+			<img class="thumb" src="image2.jpg" >
 		</div>
 
 		<div class="thumbnail">
-			<p>third</p>
+			<img class="thumb" src="image3.jpg" >
+		</div>
+
+		<div class="thumbnail">
+			<img class="thumb" src="image4.jpg" >
 		</div>
 	</div>
 
