--- a/index.html
+++ b/index.html
@@ -184,25 +184,20 @@
 	</div>
    
    	<div class="blocks">     
-		<div class="thumbnail">
-			<img class="thumb" src="image1.jpg" >
-		</div>
+		
+		<img class="thumbnail" src="image1.jpg" styleheight="100%;max-width=100%">
 
-		<div class="thumbnail">
-			<img class="thumb" src="image2.jpg" >
-		</div>
+		<img class="thumbnail" src="image2.jpg" style"height=100%;max-width=100%">
 
-		<div class="thumbnail">
-			<img class="thumb" src="image3.jpg" >
-		</div>
+		<img class="thumbnail" src="image3.jpg" style"height=100%;max-width=100%">
 
-		<div class="thumbnail">
-			<img class="thumb" src="image4.jpg" >
-		</div>
+		<img class="thumbnail" src="image4.jpg" style"height=100%;max-width=100%">
+
+		
 	</div>
 
 	
-              
+              <h2>We are about to make history </h2>
 		 			                             
 </body>
 
