--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
    
    	<div class="blocks">     
 		
-		<img class="thumbnail" src="image1.jpg" styleheight="100%;max-width=100%">
+		<img class="thumbnail" src="image1.JPG" styleheight="100%;max-width=100%">
 
-		<img class="thumbnail" src="image2.jpg" style"height=100%;max-width=100%">
+		<img class="thumbnail" src="image2.JPG" style"height=100%;max-width=100%">
 
-		<img class="thumbnail" src="image3.jpg" style"height=100%;max-width=100%">
+		<img class="thumbnail" src="image3.JPG" style"height=100%;max-width=100%">
 
-		<img class="thumbnail" src="image4.jpg" style"height=100%;max-width=100%">
+		<img class="thumbnail" src="image4.JPG" style"height=100%;max-width=100%">
 
 		
 	</div>
