--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 
-    <link type="text/css" rel="stylesheet" href="css/custom.css">
+    <link type="text/css" rel="stylesheet" href="custom.css">
 	
 	<link type="text/css" rel="stylesheet" href="css/main.css">
 	
