--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
 
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 
-    <link type="text/css" rel="stylesheet" href="css/custom.css">
+    <link type="text/css" rel="stylesheet" href="custom.css">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
