--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
 
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 
-    <link type="text/css" rel="stylesheet" href="custom.css">
+    <link type="text/css" rel="stylesheet" href="css/custom.css">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -78,10 +78,10 @@
 				
                          <p class="about">&emsp; <a href="#"> Who we are </a>&emsp; <a href="">What we do</a>&emsp; <a href="">Founders</a> &emsp; <a href="">Vision</a> &emsp;<a href="">Contact Us</a> </p>
 
-                         <hr style="color:#fff;margin-top:-15px;">
+                         <hr style="color:#888;margin-top:-15px;margin-left:26%;margin-right:26%; ">
 
 
-                         <p style="line-height:15vw; font-size:5vw; font-family:Myriad Pro; color:#000 ; font-weight:lighter "> Together We Make Future!</p>
+                         <p class="tag" > Together We Make Future!</p>
 						
                 </div>
 	
