--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       	<div class="container">
 		<div class="block">
-			<img src="First.jpg" alt="First">
+			<img src="First.JPG" alt="First">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">March 10</h4>
 			<h4 style="margin-left: 20px;">Visharambagh</h4>
@@ -141,7 +141,7 @@
 		</div>
 		
 		<div class="block" style="margin-right: 0%">
-			<img src="Second.jpg" alt="Second">
+			<img src="Second.JPG" alt="Second">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">January 21</h4>
 			<h4 style="margin-left: 20px;">Tarabai Park</h4>
@@ -154,7 +154,7 @@
 
     	<div class="container">
 		<div class="smallblock">
-			<img src="Small1.jpg" alt="Small1">
+			<img src="Small1.JPG" alt="Small1">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">December 25</h4>
 			<h4 style="margin-left: 20px;">Downtown</h4>
@@ -163,7 +163,7 @@
 		</div>
 	
 		<div class="smallblock">
-			<img src="Small2.jpg" alt="Small2">
+			<img src="Small2.JPG" alt="Small2">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">September 09</h4>
 			<h4 style="margin-left: 20px;">Silicon Valley</h4>
@@ -172,7 +172,7 @@
 		</div>
 	
 		<div class="smallblock" style="margin-right: 0%">
-			<img src="Small1.jpg" alt="Small1">
+			<img src="Small1.JPG" alt="Small1">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">August 15</h4>
 			<h4 style="margin-left: 20px;">Adarsh Nagar</h4>
