--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       	<div class="container">
 		<div class="block">
-			<img src="First.JPG" alt="First">
+			<img src="First.jpg" alt="First">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">March 10</h4>
 			<h4 style="margin-left: 20px;">Visharambagh</h4>
@@ -141,7 +141,7 @@
 		</div>
 		
 		<div class="block" style="margin-right: 0%">
-			<img src="Second.JPG" alt="Second">
+			<img src="Second.jpg" alt="Second">
 			<br><br>
 			<h4 style="color: grey; margin-left: 20px;">January 21</h4>
 			<h4 style="margin-left: 20px;">Tarabai Park</h4>
