--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                    					<li> <tab3>  </tab3> </li>		
 						<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
 	                				<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
-                       					<li><a href="#"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
+                       					<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                         				<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
                        					<li><a href="#"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-			            		<li><a href="#"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+			            		<li><a href="Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                				         	<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
 			</div>
@@ -58,8 +58,8 @@
 	<!-- *************Heading***************   -->
 	<div class="text-center">
 
-                 <p style="color:#b8ff00; font-family:Myriad Pro; font-size:45px; margin-top:-20px">Environment Mini Project</p>
-                 <hr>
+                 <p style="color:#b8ff00;font-family:Myriad Pro; font-size:45px; margin-top:-20px">Environment Mini Project</p>
+                 <hr >
                  
 	</div>
 
@@ -126,7 +126,8 @@
 	<div class="text-center">
     		<div class="reports">
 			<p >Reports</p>
-			<p >At a glance.</p>	
+			<hr style="border-color:#e3e3e3;">
+			<p >At a glance</p>	
 		</div>
 	</div>
 
@@ -134,49 +135,81 @@
       		
       		<br>
 		<div class="block">
-			<img src="First.jpg" alt="First" style="background-color: rgba(0,0,0,0.9);">
+			<div class="blur"></div>
+			<div class="caption">
+				<div class="caption-text">
+					<h1>Blueberries</h1>
+				</div>
+			</div>	
+			<img  src="First.jpg" alt="First" >
+			
 			<br><br>
-			<h4 style="color: #666; margin-left: 20px;font-family:Myriad Set Pro">March 10</h4>
+			<h4 style="color: #666; margin-left: 20px;font-family:Myriad  Pro">March 10</h4>
 			<h4 style="margin-left: 20px;color:#333">Visharambagh</h4>
 			<h4 style="margin-left: 20px;">Sangli, 416415</h4>
 			<p> <a href="First.jpg" style=" font-size: 20px;float:right;margin-right:10px">more &#8250;</a> </p>
 		</div>
 		
 		<div class="block" style="margin-right: 0%">
+			<div class="blur"></div>
+			<div class="caption">
+				<div class="caption-text">
+					<h1>Beauty</h1>
+				</div>
+			</div>	
 			<img src="Second.jpg" alt="Second">
 			<br><br>
-			<h4 style="color: #666; margin-left: 20px;font-family:Myriad Set Pro">January 21</h4>
+			<h4 style="color: #666; margin-left: 20px;font-family:Myriad Pro">January 21</h4>
 			<h4 style="margin-left: 20px;color:#333">Tarabai Park</h4>
 			<h4 style="margin-left: 20px;">Kolhapur, 416003</h4>
 			<p><a href="Second.jpg" style=" font-size: 20px;float:right;margin-right:10px"> more &#8250; </a></p>
 		</div>
 	</div>
 
-	<br>
+	<br><br>
 
     	<div class="container">
 		<div class="smallblock">
+			<div class="blur"></div>
+			<div class="caption">
+				<div class="caption-text">
+					<h1>Beauty</h1>
+				</div>
+			</div>	
 			<img src="Small1.JPG" alt="Small1">
 			<br><br>
-			<h4 style="color: #666 ;margin-left: 20px;font-family:Myriad Set Pro">December 25</h4>
+			<h4 style="color: #666 ;margin-left: 20px;font-family:Myriad  Pro">December 25</h4>
 			<h4 style="margin-left: 20px;color:#333">Andheri east</h4>
 			<h4 style="margin-left: 20px;">Mumbai, 400069</h4>
 			<p><a href="First.jpg" style="font-size:20px;float:right;margin-right:10px">more &#8250;</a></p>
 		</div>
 	
 		<div class="smallblock">
+			<div class="blur"></div>
+			<div class="caption">
+				<div class="caption-text">
+					<h1>Nice</h1>
+				</div>
+			</div>	
 			<img src="Small2.JPG" alt="Small2">
+			
 			<br><br>
-			<h4 style="color: #666; margin-left: 20px; font-family:Myriad Set Pro">September 09</h4>
+			<h4 style="color: #666; margin-left: 20px; font-family:Myriad  Pro">September 09</h4>
 			<h4 style="margin-left: 20px;color:#333">Silicon Valley</h4>
 			<h4 style="margin-left: 20px;">California</h4>
 			<p><a href="First.jpg" style=" font-size: 20px;float:right;margin-right:10px">more &#8250;</a></p>
 		</div>
 	
 		<div class="smallblock" style="margin-right: 0%">
-			<img src="Small1.JPG" alt="Small1">
+			<div class="blur"></div>
+			<div class="caption">
+				<div class="caption-text">
+					<h1>Magnificent</h1>
+				</div>
+			</div>	
+			<img src="Small3.JPG" alt="GOT">
 			<br><br>
-			<h4 style="color: #666; margin-left: 20px;font-family:Myriad Set Pro">August 15</h4>
+			<h4 style="color: #666; margin-left: 20px;font-family:Myriad  Pro">August 15</h4>
 			<h4 style="margin-left: 20px;color:#333">Adarsh Nagar</h4>
 			<h4 style="margin-left: 20px;">Barshi, 413411</h4>
 			<p><a href="First.jpg" style=" font-size: 20px;float:right;margin-right:10px">more &#8250;</a></p>
@@ -208,9 +241,12 @@
 				    <li><a href=" ">Terms of Use&nbsp; </a></li>
 				</ul>
 			</div>
-			<br>
-	 		<hr style="border-color:#e3e3e3;margin-top:-2%">
-			<p class="footer" style="font-size:13px;margin-top:-1.777%"> Copyright © 2016 WM Inc. All rights reserved. <tab5> </tab5><img src="http://images.apple.com/ac/flags/1/images/in/16.png"><span style="color:#333;"> India<span></p>
+			
+	 		<br>
+	 		<div class="footer" >.
+	 			<hr >
+				<p > Copyright © 2016 WM Inc. All rights reserved. <tab5> </tab5><img src="http://images.apple.com/ac/flags/1/images/in/16.png"><span style="color:#333;"> India<span></p>
+			</div>
 
 		</div>
 
