--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<!-- *************Heading***************   -->
 	<div class="text-center">
 
-                 <p style="color:#b8ff00;font-family:Myriad Pro; font-size:45px; margin-top:-20px">Environment Mini Project</p>
+                 <p style="color:#b8ff00;font-family:Myriad Pro,sans-serif,Arial,Calibri; font-size:45px; margin-top:-20px">Environment Mini Project</p>
                  <hr >
                  
 	</div>
@@ -218,6 +218,7 @@
               
 	 <br>
 
+	 <!-- **************FOOTER**************!-->
 	
 	 <div class="container">
 	 	<hr style="border-color:#e3e3e3;">
