--- a/Eco.html
+++ b/Eco.html
@@ -56,17 +56,117 @@
     </nav>
 
     	<div  class="container">
-            	<p>  Recycle </p>
-            	<hr>
+            		<p >  Recycle </p>
+            		<hr >
 	            <div class="caption">
 			<div class="caption-text">
 				<p>Recycle is everything.</p>
 			</div>
 		</div>	
-            	<img src="recycle.JPG"  width="100%" height="370">
-            	<br>
-            	<br>
-            	<p id="text">You can recycle aluminium over and over again , and there is really no limit to it.</p>
+            		<img src="recycle1.JPG"  width="100%" height="470">
+            		<br>
+            		<br>
+            		<p style="text-align:center;font-size:25px;color:#000">Recycling can make difference in the enviroment.</p>
+            		<p id="text">
+               	     		<br>
+               	     		You can recycle aluminium over and over again , and there is really no limit to it.
+               	     		This is absolutely true.<br>Paper recycling has increased about 89% since 1990.<br>Recycling helps to conserve energy and as a result less green house gases are emitted.
+               	</p>
    	</div>
 
+   	<div class="container">
+   		<p> Reuse</p>
+   		<hr >
+   		<div class="caption">
+			<div class="caption-text">
+				<p id="reuse"> Not everything can be new, so reuse</p>
+			</div>
+		</div>	
+		<img src="reuse.JPG"  width="100%" height="470"><p style="text-align:center;font-size:25px;color:#000">Finite Resources</p>
+		
+            		<p id="text">
+               	     		<br>
+               	     		The planet has limited supply of pure water, so we make sure so we should make sure that,<br> we can reduce the wasteage by reusing the wate again and again as much as possible.<br>
+               	</p>
+   	</div>
+
+   	<div class="container">
+   		<p> Reduce</p>
+   		<hr >
+   		<div class="caption">
+			<div class="caption-text">
+				<p id="reuse" style="color:#000">Everything has a limited use</p>
+			</div>
+		</div>	
+		<img src="reduce.JPG"  width="100%" height="470">
+		<p style="text-align:center;font-size:25px;color:#000">Respect for enviroment we live in.</p>
+		
+            		<p id="text">
+               	     	<br> Just by reucing the use of plastics we can lessen the <span style="color:#548c8c;font-size:24px;font-family:Myriad Pro,Arial,sans-serif">CO2</span> by <span style="color:#548c8c;font-size:24px;font-family:Myriad Pro,Arial,sans-serif">3.5kgs</span>
+               	</p>
+   	</div>
+   	<br><br>
+   	<div class="container">
+   		<br>
+   		<p id="R"><img height="55" width="55" src="recycle.GIF"></p>
+   		<h2> Reduce. Reuse. Recycle</h2><br>
+   	</div>
+   	<div class="container">
+   		<div class="energy">
+   			<div><img src="solar_icon_large.PNG">&emsp; </div>
+   			<p style="font-size:15px">&emsp; solar</p>
+   		</div>
+
+   		<div class="energy">
+   			<div>&emsp;<img src="fuel_icon_large.PNG">&emsp;</div>
+   			<p style="font-size:15px"> &emsp; fuel</p>
+   		</div>
+   		<div class="energy">
+   			<div>&emsp;<img src="water_icon_large.PNG">&emsp;</div>
+   			<p style="font-size:15px">&emsp;  water</p>
+   		</div>
+   		<div class="energy">
+   			<div>&emsp;<img src="geothermal_icon_large.PNG"></div>
+   			<p style="font-size:15px">&emsp;  geothermal</p>
+   		</div>
+   	</div>
+
+
+   	<br><br><br><br>
+   	<!-- **************FOOTER**************!-->
+	
+	 <div class="container">
+	 	
+		 <div class="jumbotron">
+			<p  class="footer"> 
+				<span>
+
+	 				<span style="color:#000">Contact Us: </span>1800 666 999 <a href="https://en.wikipedia.org/wiki/Toll-free_telephone_number" target="_blank" > (toll free) </a><br>
+	 				<span style="color:#000">E-mail:</span> queries@wm.com<br>
+	 				<span style="color:#000">Address:</span>
+	 								Rajarambapu Institute of Technology, rajaramnagar<br>
+	 								Islampur, 415409
+	 			</span>
+	 		</p>
+
+	 		<div id="menu">
+  				<ul>
+				    <li><a href="">Help&nbsp;</a></li>  				<li style="color:#111">|&nbsp;<li>
+				    <li><a href="site_map.html">Site Map &nbsp;<a/></li> 			  	<li style="color:#111">|&nbsp;<li>
+				    <li><a href="">Privacy Policy &nbsp;</a></li>		  	<li style="color:#111">|&nbsp;<li>
+				    <li><a href=" ">Terms of Use&nbsp; </a></li>
+				</ul>
+			</div>
+			
+	 		<br>
+	 		<div class="footer" >.
+	 			<hr >
+				<p > Copyright © 2016 WM Inc. All rights reserved. <tab5> </tab5><img style="margin-top:-0.1%"src="http://images.apple.com/ac/flags/1/images/in/16.png"><span style="color:#333;"> India<span></p>
+			</div>
+
+		</div>
+
+	</div>
+
 </body>
+</html>
