--- a/About.html
+++ b/About.html
@@ -76,7 +76,7 @@
 		
                 <div class="text-center">
 				
-                         <p class="about">&emsp; <a href="#"> Who we are </a>&emsp; <a href="">What we do</a>&emsp; <a href="">Founders</a> &emsp; <a href="">Vision</a> &emsp;<a href="">Contact Us</a> </p>
+                         <p class="about">&emsp; <a href=""> What we do </a>&emsp; <a href="who_we_are.html">Who we are</a>&emsp; <a href="">Founders</a> &emsp; <a href="">Vision</a> &emsp;<a href="">Contact Us</a> </p>
 
                          <hr style="color:#888;margin-top:-15px;margin-left:26%;margin-right:26%; ">
 
