--- a/Eco.html
+++ b/Eco.html
@@ -111,25 +111,25 @@
    		<p id="R"><img height="55" width="55" src="recycle.GIF"></p>
    		<h2> Reduce. Reuse. Recycle</h2><br>
    	</div>
-   	<div class="container">
-   		<div class="energy">
+   	<!--<div class="container">
+   		<div class="energy" style="margin-left:24%">
    			<div><img src="solar_icon_large.PNG">&emsp; </div>
-   			<p style="font-size:15px">&emsp; solar</p>
+   			<p style="font-size:15px; text-align:center;"> solar</p>
    		</div>
 
    		<div class="energy">
    			<div>&emsp;<img src="fuel_icon_large.PNG">&emsp;</div>
-   			<p style="font-size:15px"> &emsp; fuel</p>
+   			<p style="font-size:15px; text-align:center; ">fuel</p>
    		</div>
    		<div class="energy">
    			<div>&emsp;<img src="water_icon_large.PNG">&emsp;</div>
-   			<p style="font-size:15px">&emsp;  water</p>
+   			<p style="font-size:15px; text-align:center; ">  water</p>
    		</div>
    		<div class="energy">
    			<div>&emsp;<img src="geothermal_icon_large.PNG"></div>
-   			<p style="font-size:15px">&emsp;  geothermal</p>
+   			<p style="font-size:15px; text-align:center;"> geothermal</p>
    		</div>
-   	</div>
+   	</div>!-->
 
 
    	<br><br><br><br>
