--- a/contact_us.html
+++ b/contact_us.html
@@ -11,7 +11,7 @@
     	<link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     	<link type="text/css" rel="stylesheet" href="css/custom.css">
 	<link type="text/css" rel="stylesheet" href="css/main.css">
-	<link type="text/css" rel="stylesheet" href="css/who_we_are.css">
+	<link type="text/css" rel="stylesheet" href="css/contact_us.css">
     	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -55,59 +55,27 @@
         	</div>
   </nav>
 	 <div class="container">
-		<p id="title"> Team</p>
-		<hr>
+		<p id="title"> Contact Us</p>
+		<hr style="margin-top:-1%">
 	</div>
-
+	<br>
 	<div class="container">
-      		
-      		<br>
-
-      		<div class="akshay">
-			<img  src="akshay.jpg" alt="Image-akshay" >
-			
-			<br><br>
-			<h4 style="color: #000; margin-left: 10px;font-family:Myriad  Pro">Akshay Gaikwad</h4>
-			<h4 style="margin-left: 10px;color:#666;font-family:Myriad  Pro">Student</h4>
-			<h4 style="margin-left: 20px;"></h4>
-			<p> <a href="akshay.jpg" style=" font-size: 18px;margin-left:10px">more &#8250;</a> </p>
-		</div>
-
-		<div class="akshay">
-			<img  src="gajanan.jpg" alt="Image-gajanan" >
-			
-			<br><br>
-			<h4 style="color: #000; margin-left: 10px;font-family:Myriad  Pro">Gajanan More</h4>
-			<h4 style="margin-left: 10px;color:#666;font-family:Myriad  Pro">Student</h4>
-			<h4 style="margin-left: 20px;"></h4>
-			<p> <a href="gajanan.jpg" style=" font-size: 18px;margin-left:10px">more &#8250;</a> </p>
-		</div>
-
-		<div class="akshay">
-			<img  src="tushar.jpg" alt= "Image-tushar">
-			
-			<br><br>
-			<h4 style="color: #000; margin-left: 10px;font-family:Myriad  Pro">Tushar Nitave</h4>
-			<h4 style="margin-left: 10px;color:#666;font-family:Myriad  Pro">Student</h4>
-			<h4 style="margin-left: 20px;"></h4>
-			<p> <a href="tushar.jpg" style=" font-size: 18px;margin-left:10px">more &#8250;</a> </p>
-		</div>
-		<div class="akshay">
-			<img  src="bhavin.jpg" alt="Image-bhavin" >
-			
-			<br><br>
-			<h4 style="color: #000; margin-left: 10px;font-family:Myriad  Pro">Bhavin Gandhi</h4>
-			<h4 style="margin-left: 10px;color:#666;font-family:Myriad  Pro">Student</h4>
-			<h4 style="margin-left: 20px;"></h4>
-			<p> <a href="bhavin.jpg" style=" font-size: 18px;margin-left:10px">more &#8250;</a> </p>
-		</div>
-
-		
-
-		
-
-		
+		<p id="OF">Our Office <span style="color:#666;font-size:18px">(HQ)</span> </p>
+		<!--<hr style="margin-top:-1%;margin-right:76.5%; border-color:#e3e3e3;">!-->
+                           	<p id="add" > <span style="color:#000">Waste Management, Inc.</span><br>Rajarambapu Institute of Technology<br>Rajaramnagar, Islampur<br>Dist. Sangli, 415414<br><a href="mailto:xyz@wm.com"><span style="color:#333">Email</span>  xyz@wm.com</a><br><span>Phone:</span> (0233) 2300000 <p>     
 	</div>
+	<br>
+	<div class="container">
+		<p id="CC">Customer Care </p>
+		<!--<hr style="margin-top:-1%;margin-right:76.5%; border-color:#e3e3e3;">!-->
+		<p style="color:#666;font-size:18px;font-family:Myriad Pro"> <span>Toll Free: </span>1800 108 108<br> <span>Tel:</span> 0233 2301853 <br><span>Fax:</span> xxx-xxxxxx</p>
 
+	</div>
+	<br>
+	<div class="container">
+		<p id="follow"> Follow Us: <a href="https://www.facebook.com" target="_blank" >waste-management</a></p>
+		<hr style="border-color:#e3e3e3;margin-top:-0.8%">
+		<p style="margin-top:-1.5%; color:#333;font-family:Myriad Pro"> Copyright © 2016 WM Inc. All rights reserved.</p>
+	</div>
 </body>
 </html>
