--- a/Eco.html
+++ b/Eco.html
@@ -63,7 +63,7 @@
 				<p>Recycle is everything.</p>
 			</div>
 		</div>	
-            		<img src="recycle1.JPG"  width="100%" height="470">
+            		<img src="recycle1.jpg"  width="100%" height="470">
             		<br>
             		<br>
             		<p style="text-align:center;font-size:25px;color:#000">Recycling can make difference in the enviroment.</p>
@@ -82,7 +82,7 @@
 				<p id="reuse"> Not everything can be new, so reuse</p>
 			</div>
 		</div>	
-		<img src="reuse.JPG"  width="100%" height="470"><p style="text-align:center;font-size:25px;color:#000">Finite Resources</p>
+		<img src="reuse.jpg"  width="100%" height="470"><p style="text-align:center;font-size:25px;color:#000">Finite Resources</p>
 		
             		<p id="text">
                	     		<br>
@@ -98,7 +98,7 @@
 				<p id="reuse" style="color:#000">Everything has a limited use</p>
 			</div>
 		</div>	
-		<img src="reduce.JPG"  width="100%" height="470">
+		<img src="reduce.jpg"  width="100%" height="470">
 		<p style="text-align:center;font-size:25px;color:#000">Respect for enviroment we live in.</p>
 		
             		<p id="text">
