--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	                				<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                        					<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                         				<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
-                       					<li><a href="#"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
+                       					<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
 			            		<li><a href="Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                				         	<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
@@ -231,7 +231,7 @@
 	 				<span style="color:#000">Address:</span>
 	 								Rajarambapu Institute of Technology, rajaramnagar<br>
 	 								Islampur, 415409
-	 			</span>
+	 				</span>
 	 		</p>
 
 	 		<div id="menu">
