--- a/Eco.html
+++ b/Eco.html
@@ -46,10 +46,9 @@
                         			<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
                                     		<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                                         		<li><a href="#"> <p style="color:#999">Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
-                                       		<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
                                        		<li><a href="#"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-                                		<li><a href="Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
-                                        		<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
+                                		<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+                                        		
                             		</ul>             
             		</div>
         	</div>
