--- a/Login.html
+++ b/Login.html
@@ -28,8 +28,8 @@
 <body >
 	 <div class="container">
 	 	<div class="text-center>"
-	 	<p style="font-family:Myriad Set Pro;color:#333;font-size:54px">WM</p>
-	 </div>
+	 		<p style="font-family:Myriad Set Pro;color:#333;font-size:54px">WM</p>
+	               </div>
 	 	<hr style="border-color:#e3e3e3;margin-top:-2%">
     		<div class="login-boxed" >
         			<div class=" login-container">   
@@ -52,9 +52,9 @@
             				</form>
             				<p style="margin-left:13%;margin-top:3.33333%">Don't have an account? <a href="sign-up.html">Sign Up </a></p>
             				<p style="margin-left:28%;margin-top:4%"> <a href="">Forgot password?</a></p>
-        			</div>
+        			</div>                            
     		</div>
-
+    		<p> <a href="">back</a></p>
 	</div>
 </body>
 
