--- a/help.html
+++ b/help.html
@@ -45,10 +45,8 @@
 						<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
 	                				<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                        					<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
-                        				<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
                        					<li><a href="help.html"> <p style="color:#999">Help</p></a></li>  <li> <tab2>  </tab2> </li>
-			            		<li><a href="Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
-               				         	<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
+			            			<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
 			</div>
 		</div>
@@ -74,6 +72,8 @@
 	<div class="container">
 		<p style="text-align:center"><img src="3.png" ></p>
 		<p id="first"><span id="head">Upload It</span><br>Select the image and hit the upload button. Everything else will be our responsibilty</p>
+		<hr style="border-color:#e3e3e3">
+		<p> want more help?<a href="contact_us.html"> contact us</a></p>
 	</div>
 	<div class="container">
 		<hr style="border-color:#e3e3e3">
