--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
 						<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
 	                				<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                        					<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
-                        				<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
                        					<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-			            		<li><a href="Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
-               				         	<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
+			            			<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
 			</div>
 		</div>
@@ -58,7 +56,7 @@
 	<!-- *************Heading***************   -->
 	<div class="text-center">
 
-                 <p style="color:#b8ff00;font-family:Myriad Pro,sans-serif,Arial,Calibri; font-size:45px; margin-top:-20px">Environment Mini Project</p>
+                 <p style="color:#548c8c;font-family:Myriad Pro,sans-serif,Arial,Calibri; font-size:45px; margin-top:-20px">Environment Mini Project</p>
                  <hr >
                  
 	</div>
