--- a/who_we_are.html
+++ b/who_we_are.html
@@ -47,8 +47,8 @@
                                    		<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                                         		<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                                         		<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
-                                        		<li><a href="#"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-                                		<li><a href="Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+                                        		<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
+                                		<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                                         		<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
                             	-</ul>             
             		</div>
@@ -70,7 +70,7 @@
 			<h4 style="color: #000; margin-left: 10px;font-family:Myriad  Pro">Akshay Gaikwad</h4>
 			<h4 style="margin-left: 10px;color:#666;font-family:Myriad  Pro">Student</h4>
 			<h4 style="margin-left: 20px;"></h4>
-			<p> <a href="akshay.jpg" style=" font-size: 18px;margin-left:10px">more &#8250;</a> </p>
+			<p>  <a href="akshay.jpg" style=" font-size: 18px;margin-left:10px">Learn more </a>  </p>
 		</div>
 
 		<div class="akshay">
