--- a/About.html
+++ b/About.html
@@ -61,13 +61,10 @@
 
                         				<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
 
-                        				<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
+					<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
 
-					<li><a href="#"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
+                        				<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
 
-                        				<li><a href="#"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
-
-                        				<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
 	        		</div>
 		</div>
@@ -76,9 +73,9 @@
 		
                 <div class="text-center">
 				
-                         <p class="about">&emsp; <a href=""> What we do </a>&emsp; <a href="who_we_are.html">Who we are</a>&emsp; <a href="">Founders</a>  &emsp;<a href="contact_us.html">Contact Us</a> </p>
+                         <p class="about">&emsp; <a href=""> What we do </a>&emsp; <a href="who_we_are.html">Who we are</a>&emsp; <a href="contact_us.html">Contact Us</a> </p>
 
-                         <hr style="color:#888;margin-top:-15px;margin-left:26%;margin-right:26%; ">
+                         <hr style="color:#888;margin-top:-15px;margin-left:30%;margin-right:28%; ">
 
 
                          <p class="tag" > Together We Make Future!</p>
