--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">			
                    					<li> <tab3>  </tab3> </li>		
-						<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
-	                				<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
-                       					<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
+						<li><a href="about.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
+	                				<li><a href="service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
+                       					<li><a href="eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                        					<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-			            			<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+			            			<li><a href="login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
 			</div>
 		</div>
@@ -56,12 +56,12 @@
 	<!-- *************Heading***************   -->
 	<div class="text-center">
 
-                 <p style="color:#548c8c;font-family:Myriad Pro,sans-serif,Arial,Calibri; font-size:45px; margin-top:-20px">Environment Mini Project</p>
+                 <p style="color:#548c8c;font-family:Myriad Pro,Arial,Calibri; font-size:45px; margin-top:-20px">Environment Mini Project</p>
                  <hr >
                  
 	</div>
 
-    <br><br>
+    	<br><br>
 	
 	<!-- **************Quote**************** -->
 	<div class="text-center">
@@ -234,10 +234,13 @@
 
 	 		<div id="menu">
   				<ul>
-				    <li><a href="">Help&nbsp;</a></li>  				<li style="color:#111">|&nbsp;<li>
-				    <li><a href="site_map.html">Site Map &nbsp;<a/></li> 			  	<li style="color:#111">|&nbsp;<li>
-				    <li><a href="">Privacy Policy &nbsp;</a></li>		  	<li style="color:#111">|&nbsp;<li>
-				    <li><a href=" ">Terms of Use&nbsp; </a></li>
+				    	<li><a href="">Help &nbsp;</a></li>  				
+				    	<li style="color:#111">| &nbsp;<li>
+				    	<li><a href="site_map.html">Site Map &nbsp;<a/></li> 	
+				    	<li style="color:#111">| &nbsp;</li>
+				    	<li><a href="">Privacy Policy &nbsp;</a></li>		  
+				    	<li style="color:#111">| &nbsp;<li>
+				    	<li><a href=" ">Terms of Use &nbsp; </a></li>
 				</ul>
 			</div>
 			
