--- a/who_we_are.html
+++ b/who_we_are.html
@@ -43,14 +43,12 @@
             		<div class="collapse navbar-collapse" id="myNavbar">
                		 <ul class="nav navbar-nav">         
                                    		<li> <tab3>  </tab3> </li>      
-                        			<li><a href="About.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
-                                   		<li><a href="#"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
-                                        		<li><a href="Eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
-                                        		<li><a href="#"> <p>Solutions</p></a></li> <li> <tab2>  </tab2> </li>
+                        			<li><a href="about.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
+                                   		<li><a href="service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
+                                        		<li><a href="eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                                         		<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-                                		<li><a href="Admin_Login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
-                                        		<li><a href="#"> <p>Sign Up </p></a></li> <li> <tab2>  </tab2> </li>
-                            	-</ul>             
+                                		<li><a href="login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+                            		</ul>             
             		</div>
         	</div>
   </nav>
