--- a/eco.html
+++ b/eco.html
@@ -107,7 +107,7 @@
    	<br><br>
    	<div class="container">
    		<br>
-   		<p id="R"><img height="55" width="55" src="recycle.GIF"></p>
+   		<p id="R"><img height="55" width="55" src="recycle.gif"></p>
    		<h2> Reduce. Reuse. Recycle</h2><br>
    	</div>
    	<!--<div class="container">
@@ -150,7 +150,7 @@
 
 	 		<div id="menu">
   				<ul>
-				    <li><a href="">Help&nbsp;</a></li>  				<li style="color:#111">|&nbsp;<li>
+				    <li><a href="help.html">Help&nbsp;</a></li>  				<li style="color:#111">|&nbsp;<li>
 				    <li><a href="site_map.html">Site Map &nbsp;<a/></li> 			  	<li style="color:#111">|&nbsp;<li>
 				    <li><a href="">Privacy Policy &nbsp;</a></li>		  	<li style="color:#111">|&nbsp;<li>
 				    <li><a href=" ">Terms of Use&nbsp; </a></li>
