--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 	 		<div id="menu">
   				<ul>
-				    	<li><a href="">Help &nbsp;</a></li>  				
+				    	<li><a href="help.html">Help &nbsp;</a></li>  				
 				    	<li style="color:#111">| &nbsp;<li>
 				    	<li><a href="site_map.html">Site Map &nbsp;<a/></li> 	
 				    	<li style="color:#111">| &nbsp;</li>
