--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 				<div class="form-group">
 					<label for="name"  class="name">Name</label>
-					<p><input type="text" class="form-control" placeholder="Enter your name" name="name" id="name"></p> 
+					<p><input type="text" class="form-control" placeholder="Enter your name" name="name" id="name" required></p> 
 				</div>
 
 				<div class="form-group">
@@ -88,12 +88,12 @@
 				</div>
 				
 				<div class="form-group">
-					<label for="name"  class="name">Pincode</label>
-					<p><input type="text" class="form-control" placeholder="pincode" name="name" id="name"></p> 
+					<label for="pin">PIN code:</label>
+					<p><input type="number" class="form-control" placeholder="Pincode" name="pin" id="pin" min="100000" max="999999" required></p> 
 				</div>
 
 				<div class="form-group">
-					<label class="name" for="des">Select image to upload</label>
+					<label class="name" for="fileToUpload">Select image to upload</label>
 					<p><input style="height:2%" type="file" name="fileToUpload" id="fileToUpload" class="form-control"></p>  
 				
 
