--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">			
                    					<li> <tab3>  </tab3> </li>		
-						<li><a href="about.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
-	                				<li><a href="service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
-                       					<li><a href="eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
-                       					<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-			            			<li><a href="login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+						<li><a href="pages/about.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
+	                				<li><a href="pages/service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
+                       					<li><a href="pages/eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
+                       					<li><a href="pages/help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
+			            			<li><a href="pages/login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                 			</ul>			  
 			</div>
 		</div>
@@ -139,7 +139,7 @@
 					<h1>Blueberries</h1>
 				</div>
 			</div>	
-			<img  src="First.jpg" alt="First" >
+			<img  src="img/First.jpg" alt="First" >
 			
 			<br><br>
 			<h4 style="color: #666; margin-left: 20px;font-family:Myriad  Pro">March 10</h4>
@@ -155,7 +155,7 @@
 					<h1>Beauty</h1>
 				</div>
 			</div>	
-			<img src="Second.jpg" alt="Second">
+			<img src="img/Second.jpg" alt="Second">
 			<br><br>
 			<h4 style="color: #666; margin-left: 20px;font-family:Myriad Pro">January 21</h4>
 			<h4 style="margin-left: 20px;color:#333">Tarabai Park</h4>
@@ -174,7 +174,7 @@
 					<h1>Beauty</h1>
 				</div>
 			</div>	
-			<img src="Small1.JPG" alt="Small1">
+			<img src="img/Small1.JPG" alt="Small1">
 			<br><br>
 			<h4 style="color: #666 ;margin-left: 20px;font-family:Myriad  Pro">December 25</h4>
 			<h4 style="margin-left: 20px;color:#333">Andheri east</h4>
@@ -189,13 +189,13 @@
 					<h1>Nice</h1>
 				</div>
 			</div>	
-			<img src="Small2.JPG" alt="Small2">
+			<img src="img/Small2.JPG" alt="Small2">
 			
 			<br><br>
 			<h4 style="color: #666; margin-left: 20px; font-family:Myriad  Pro">September 09</h4>
 			<h4 style="margin-left: 20px;color:#333">Silicon Valley</h4>
 			<h4 style="margin-left: 20px;">California</h4>
-			<p><a href="First.jpg" style=" font-size: 20px;float:right;margin-right:10px">more &#8250;</a></p>
+			<p><a href="img/First.jpg" style=" font-size: 20px;float:right;margin-right:10px">more &#8250;</a></p>
 		</div>
 	
 		<div class="smallblock" style="margin-right: 0%">
@@ -205,7 +205,7 @@
 					<h1>Magnificent</h1>
 				</div>
 			</div>	
-			<img src="Small3.JPG" alt="GOT">
+			<img src="img/Small3.JPG" alt="GOT">
 			<br><br>
 			<h4 style="color: #666; margin-left: 20px;font-family:Myriad  Pro">August 15</h4>
 			<h4 style="margin-left: 20px;color:#333">Adarsh Nagar</h4>
@@ -234,9 +234,9 @@
 
 	 		<div id="menu">
   				<ul>
-				    	<li><a href="help.html">Help &nbsp;</a></li>  				
+				    	<li><a href="pages/help.html">Help &nbsp;</a></li>  				
 				    	<li style="color:#111">| &nbsp;<li>
-				    	<li><a href="site_map.html">Site Map &nbsp;<a/></li> 	
+				    	<li><a href="pages/sitemap.html">Site Map &nbsp;<a/></li> 	
 				    	<li style="color:#111">| &nbsp;</li>
 				    	<li><a href="">Privacy Policy &nbsp;</a></li>		  
 				    	<li style="color:#111">| &nbsp;<li>
