--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@ if(isset($_POST["submit"])) {
 <div class="container">
 	<p id="welcome" style="color:#548c8c;font-size:24px"> Waste Management </p>
 	<hr >
-	<p id="welcome" style="margin-top:-1%">Welcome. Login</p>
+	<p id="welcome" style="margin-top:-1%">Welcome. AdminLogin</p>
 	<div class="boxed">
 		<div class="form-container">
 			<form role="form" action="" method="post" enctype="multipart/form-data" class="text-center">
@@ -43,7 +43,7 @@ if(isset($_POST["submit"])) {
 			<p> <a href="">Forgot Password?</a></p>
 		</div>
 	</div>
-	<p id="back" style="text-align:center;margin-top:1%"> <a href="../index.html">WM</a></p>
+	<p id="back" style="text-align:center;margin-top:1%"> <a href="../index.html">WM</a><br> &#169; 2016 WM Inc. All rights reserved.</p>
 
 </div>
 </body>
