--- a/pages/service.html
+++ b/pages/service.html
@@ -17,8 +17,8 @@
 
    	 <style type="text/css">
             	tab1 { padding-left: 21em; }
-            	tab2 { padding-left: 1.5em; }
-            	tab3 { padding-left: 9.3em; }
+            	tab2 { padding-left: 3em; }
+            	tab3 { padding-left: 11.5em; }
             	tab4 { padding-right: -70em; }
             	tab5{padding-right: 56.7em;}
             
@@ -89,9 +89,9 @@
 
 	 		<div id="menu">
   				<ul>
-				    <li><a href="">Help&nbsp;</a></li>  				<li style="color:#111">|&nbsp;<li>
+				    <li><a href="help.html">Help&nbsp;</a></li>  				<li style="color:#111">|&nbsp;<li>
 				    <li><a href="sitemap.html">Site Map &nbsp;<a/></li> 			  	<li style="color:#111">|&nbsp;<li>
-				    <li><a href="">Privacy Policy &nbsp;</a></li>		  	<li style="color:#111">|&nbsp;<li>
+				    <li><a href="privacy.html">Privacy Policy &nbsp;</a></li>		  	<li style="color:#111">|&nbsp;<li>
 				    <li><a href=" ">Terms of Use&nbsp; </a></li>
 				</ul>
 			</div>
