--- a/pages/about.html
+++ b/pages/about.html
@@ -22,12 +22,13 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <style type="text/css">
-            tab1 { padding-left: 21em; }
-            tab2 { padding-left: 1.5em; }
-            tab3 { padding-left: 9.3em; }
-            tab4 { padding-left: 30em; }
-          
-        </style>
+            	tab1 { padding-left: 21em; }
+            	tab2 { padding-left: 3em; }
+            	tab3 { padding-left: 11.5em; }
+            	tab4 { padding-right: -70em; }
+            	tab5{padding-right: 56.7em;}
+            
+    	</style>
 
 </head>
 
