--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 		<title> WM </title>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	
+	
     	<link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     	<link type="text/css" rel="stylesheet" href="css/custom.css">
-		<link type="text/css" rel="stylesheet" href="css/normalize.css">
+	<link type="text/css" rel="stylesheet" href="css/normalize.css">
     	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -87,7 +88,7 @@
 				</div>
 				
 				<div class="form-group">
-					<label for="pin">PIN code:</label>
+					<label class="name" for="pin">PIN code:</label>
 					<p><input type="number" class="form-control" placeholder="Pincode" name="pin" id="pin" min="100000" max="999999" required></p> 
 				</div>
 
