--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@ if(isset($_POST["submit"])) {
 					<p><input type="text" class="form-control" placeholder="User ID" name="username" required></p> 
 				</div>
 				<div class="form-group">
-					<label class="password" for="password" >Password:</label>
+					<label class="name" for="password" >Password:</label>
 					<p><input type="password" class="form-control" placeholder="Password" name="password" required></p> 
 				</div>	
 				<input type="submit" name="submit" value="Login" class="btn  btn-default">
