Update pages according to login and Space & indentation fix 1

--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -4,15 +4,14 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    	<title> WM </title>
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-    	<link type="text/css" rel="stylesheet" href="../css/bootstrap.css">
-    	<link type="text/css" rel="stylesheet" href="../css/custom.css">
+    <title> WM </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="../css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="../css/custom.css">
 	<link type="text/css" rel="stylesheet" href="../css/contact_us.css">
-    	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
    	 <style type="text/css">
@@ -46,7 +45,7 @@
                                    		<li><a href="service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                                         		<li><a href="eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                                         		<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-                                		<li><a href="login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+                                		<li><a href="../login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                             	</ul>             
             		</div>
         	</div>
