--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -46,7 +46,7 @@
 	                			<li><a href="pages/service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
                        			<li><a href="pages/eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
                        			<li><a href="pages/help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-			            		<li><a href="pages/login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+			            		<li><a href="../login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
                 	</ul>			  
 			</div>
 		</div>
