--- a/pages/who_we_are.html
+++ b/pages/who_we_are.html
@@ -41,14 +41,14 @@
             		</div>
 
             		<div class="collapse navbar-collapse" id="myNavbar">
-               		 <ul class="nav navbar-nav">         
-                                   		<li> <tab3>  </tab3> </li>      
-                        			<li><a href="about.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
-                                   		<li><a href="service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
-                                        		<li><a href="eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
-                                        		<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
-                                		<li><a href="login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
-                            		</ul>             
+						<ul class="nav navbar-nav">         
+							<li> <tab3>  </tab3> </li>      
+							<li><a href="about.html"> <p>About</p></a> </li> <li> <tab2>  </tab2> </li>
+							<li><a href="service.html"> <p>Service</p></a></li> <li> <tab2>  </tab2> </li>
+							<li><a href="eco.html"> <p>Eco System</p></a></li>  <li> <tab2>  </tab2> </li>
+							<li><a href="help.html"> <p>Help</p></a></li>  <li> <tab2>  </tab2> </li>
+							<li><a href="../login.html"> <p>Login </p></a></li> <li> <tab2>  </tab2> </li>
+						</ul>             
             		</div>
         	</div>
   </nav>
