--- a/pages/who_we_are.html
+++ b/pages/who_we_are.html
@@ -64,7 +64,7 @@
 			<h4 style="color: #000; margin-left: 10px;font-family:Myriad  Pro">Akshay Gaikwad</h4>
 			<h4 style="margin-left: 10px;color:#666;font-family:Myriad  Pro">Student</h4>
 			<h4 style="margin-left: 20px;"></h4>
-			<p>  <a href="../img/akshay.jpg" style=" font-size: 18px;margin-left:10px">Learn more </a>  </p>
+			<p>  <a href="../img/akshay.jpg" style=" font-size: 18px;margin-left:10px">more &#8250;</a>  </p>
 		</div>
 
 		<div class="akshay">
