--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     	<link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     	<link type="text/css" rel="stylesheet" href="css/custom.css">
 	<link type="text/css" rel="stylesheet" href="css/normalize.css">
