--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -29,7 +29,7 @@
 	<nav class="navbar navbar-inverse">                    
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">WM</a>
+				<a class="navbar-brand" href="../index.html">WM</a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
